@@ -8,6 +8,6 @@ libsphinx2fe_la_SOURCES = \
 
 noinst_HEADERS = fe_internal.h
 
-libsphinx2fe_la_LDFLAGS = -version-info 1:0:0
+libsphinx2fe_la_LDFLAGS = -version-info 0:4:0
 
 INCLUDES = -I$(top_srcdir)/include -I$(top_builddir)/include
